[gd_scene load_steps=30 format=3 uid="uid://cioeiq2ketrp7"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_1nuxl"]
[ext_resource type="Texture2D" uid="uid://bei7x67psb4c4" path="res://Assets_PixelAdventure/Main Characters/Mask Dude.png" id="1_l7j8x"]
[ext_resource type="Script" path="res://Player/StateMachine/stateMachine.gd" id="2_owes5"]
[ext_resource type="Script" path="res://Player/Idle.gd" id="3_0eqv6"]
[ext_resource type="Script" path="res://Player/Camera2D.gd" id="3_7ed6p"]
[ext_resource type="Script" path="res://Player/Moving.gd" id="4_gjm67"]
[ext_resource type="LabelSettings" uid="uid://dy3jas12u85cl" path="res://Player/GUIText.tres" id="4_tq876"]
[ext_resource type="Script" path="res://Player/enAire.gd" id="5_ium6q"]
[ext_resource type="Script" path="res://Player/takeDamage.gd" id="6_60hgi"]
[ext_resource type="AudioStream" uid="uid://ba2hxqf376lg" path="res://Assets_PixelAdventure/Sounds/Jump.ogg" id="6_un7wi"]
[ext_resource type="AudioStream" uid="uid://bk01bmd5p2v58" path="res://Assets_PixelAdventure/Sounds/Hit.ogg" id="7_fh7c2"]
[ext_resource type="Script" path="res://Player/wallSlide.gd" id="7_y6nw0"]
[ext_resource type="Script" path="res://Player/wallJump.gd" id="8_cqk2a"]
[ext_resource type="Texture2D" uid="uid://ckaore37h130l" path="res://Assets_PixelAdventure/Menu/UI/lifebar-1.png" id="12_1et8m"]
[ext_resource type="Texture2D" uid="uid://53mh0rvj54b1" path="res://Assets_PixelAdventure/Menu/UI/lifebar-2.png" id="13_bivo4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_slqit"]
size = Vector2(20.5, 22)

[sub_resource type="Animation" id="Animation_b2sne"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_n240n"]
resource_name = "doubleJump"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [25, 26, 27, 28, 29, 30, 31]
}

[sub_resource type="Animation" id="Animation_nmmhq"]
resource_name = "fall"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [24]
}

[sub_resource type="Animation" id="Animation_66jn0"]
resource_name = "herido"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [36, 38, 39, 40, 41, 42]
}

[sub_resource type="Animation" id="Animation_lr257"]
resource_name = "idle"
length = 1.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 2, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}

[sub_resource type="Animation" id="Animation_pyewa"]
resource_name = "jump"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [23]
}

[sub_resource type="Animation" id="Animation_2tv2a"]
resource_name = "walk"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22]
}

[sub_resource type="Animation" id="Animation_mmkvh"]
resource_name = "wallSlide"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [31, 33]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mmrfl"]
_data = {
"RESET": SubResource("Animation_b2sne"),
"doubleJump": SubResource("Animation_n240n"),
"fall": SubResource("Animation_nmmhq"),
"herido": SubResource("Animation_66jn0"),
"idle": SubResource("Animation_lr257"),
"jump": SubResource("Animation_pyewa"),
"walk": SubResource("Animation_2tv2a"),
"wallSlide": SubResource("Animation_mmkvh")
}

[sub_resource type="LabelSettings" id="LabelSettings_5rce0"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_au0ps"]
texture = ExtResource("12_1et8m")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_oiwt2"]
texture = ExtResource("13_bivo4")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_smqo0"]
size = Vector2(21, 22)

[node name="Player" type="CharacterBody2D" groups=["Player"]]
collision_mask = 6
script = ExtResource("1_1nuxl")

[node name="LabelState" type="Label" parent="."]
offset_left = -22.0
offset_top = -51.0
offset_right = 108.0
offset_bottom = -25.0
text = "aaaaaaaaaaaaaa"

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("2_owes5")
estado_inicial = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("3_0eqv6")
anim_player_path = NodePath("../../AnimationPlayer")

[node name="Moving" type="Node" parent="StateMachine"]
script = ExtResource("4_gjm67")
anim_player_path = NodePath("../../AnimationPlayer")

[node name="enAire" type="Node" parent="StateMachine"]
script = ExtResource("5_ium6q")
anim_player_path = NodePath("../../AnimationPlayer")

[node name="CoyoteTimer" type="Timer" parent="StateMachine/enAire"]
wait_time = 0.2
one_shot = true

[node name="BufferJumpTimer" type="Timer" parent="StateMachine/enAire"]
wait_time = 0.1
one_shot = true

[node name="takeDamage" type="Node" parent="StateMachine"]
script = ExtResource("6_60hgi")
anim_player_path = NodePath("../../AnimationPlayer")

[node name="wallSlide" type="Node" parent="StateMachine"]
script = ExtResource("7_y6nw0")
anim_player_path = NodePath("../../AnimationPlayer")

[node name="wallJump" type="Node" parent="StateMachine"]
script = ExtResource("8_cqk2a")
anim_player_path = NodePath("../../AnimationPlayer")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -15)
texture = ExtResource("1_l7j8x")
hframes = 11
vframes = 4
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, -12)
shape = SubResource("RectangleShape2D_slqit")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_mmrfl")
}

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(22, -13)
script = ExtResource("3_7ed6p")

[node name="PlayerGUI" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="PlayerGUI"]
offset_left = 4.0
offset_top = 17.0
offset_right = 67.0
offset_bottom = 57.0

[node name="FrutasLabel2" type="Label" parent="PlayerGUI/HBoxContainer"]
texture_filter = 2
layout_mode = 2
text = "Frutas: "
label_settings = SubResource("LabelSettings_5rce0")

[node name="FrutasLabel" type="Label" parent="PlayerGUI/HBoxContainer"]
layout_mode = 2
label_settings = ExtResource("4_tq876")

[node name="HPProgressBar" type="ProgressBar" parent="PlayerGUI"]
offset_left = 6.0
offset_top = -6.0
offset_right = 82.0
offset_bottom = 34.0
theme_override_styles/background = SubResource("StyleBoxTexture_au0ps")
theme_override_styles/fill = SubResource("StyleBoxTexture_oiwt2")
max_value = 10.0
value = 7.0
show_percentage = false

[node name="RaycastDmg" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="RaycastDmg"]
target_position = Vector2(0, 10)
collision_mask = 2

[node name="RayCast2D2" type="RayCast2D" parent="RaycastDmg"]
position = Vector2(5, 0)
target_position = Vector2(0, 10)
collision_mask = 2

[node name="RayCast2D3" type="RayCast2D" parent="RaycastDmg"]
position = Vector2(-5, 0)
target_position = Vector2(0, 10)
collision_mask = 2

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="AudioSalto" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_un7wi")

[node name="AudioHerirse" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_fh7c2")

[node name="RecibirDanio" type="Area2D" parent="." groups=["AreaPlayer"]]
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="RecibirDanio"]
position = Vector2(2, -12)
shape = SubResource("RectangleShape2D_smqo0")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[connection signal="animation_finished" from="AnimationPlayer" to="StateMachine/takeDamage" method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]
